// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should parse dashlord config when multiple urls input 1`] = `
Array [
  Object {
    "repositories": Array [
      "iliad/free-ui",
      "iliad/free-api",
    ],
    "title": "Free",
    "tools": Object {
      "codescan": true,
      "dependabot": true,
      "httpobs": true,
      "lighthouse": true,
      "nmap": true,
      "nuclei": false,
      "screenshot": true,
      "stats": true,
      "testssl": true,
      "thirdparties": true,
      "updownio": true,
      "wappalyzer": true,
      "zaproxy": true,
    },
    "url": "https://www.free.fr",
  },
  Object {
    "repositories": Array [
      "chez/chez-ui",
      "chez/chez-api",
    ],
    "tools": Object {
      "codescan": true,
      "dependabot": true,
      "httpobs": true,
      "lighthouse": true,
      "nmap": true,
      "nuclei": false,
      "screenshot": false,
      "stats": false,
      "testssl": true,
      "thirdparties": true,
      "updownio": false,
      "wappalyzer": true,
      "zaproxy": true,
    },
    "url": "http://chez.com",
  },
]
`;

exports[`should parse dashlord config when no input 1`] = `
Array [
  Object {
    "repositories": Array [
      "iliad/free-ui",
      "iliad/free-api",
    ],
    "title": "Free",
    "tools": Object {
      "codescan": true,
      "dependabot": true,
      "httpobs": true,
      "lighthouse": true,
      "nmap": true,
      "nuclei": false,
      "screenshot": true,
      "stats": true,
      "testssl": true,
      "thirdparties": true,
      "updownio": true,
      "wappalyzer": true,
      "zaproxy": true,
    },
    "url": "https://www.free.fr",
  },
  Object {
    "repositories": Array [
      "chez/chez-ui",
      "chez/chez-api",
    ],
    "tools": Object {
      "codescan": true,
      "dependabot": true,
      "httpobs": true,
      "lighthouse": true,
      "nmap": true,
      "nuclei": false,
      "screenshot": false,
      "stats": false,
      "testssl": true,
      "thirdparties": true,
      "updownio": false,
      "wappalyzer": true,
      "zaproxy": true,
    },
    "url": "http://chez.com",
  },
  Object {
    "tools": Object {
      "codescan": true,
      "dependabot": true,
      "httpobs": true,
      "lighthouse": true,
      "nmap": true,
      "nuclei": false,
      "screenshot": true,
      "stats": true,
      "testssl": true,
      "thirdparties": true,
      "updownio": true,
      "wappalyzer": true,
      "zaproxy": true,
    },
    "url": "https://voila.fr",
  },
]
`;

exports[`should parse dashlord config when single invalid url input 1`] = `Array []`;

exports[`should parse dashlord config when single valid url input 1`] = `
Array [
  Object {
    "repositories": Array [
      "iliad/free-ui",
      "iliad/free-api",
    ],
    "title": "Free",
    "tools": Object {
      "codescan": true,
      "dependabot": true,
      "httpobs": true,
      "lighthouse": true,
      "nmap": true,
      "nuclei": false,
      "screenshot": true,
      "stats": true,
      "testssl": true,
      "thirdparties": true,
      "updownio": true,
      "wappalyzer": true,
      "zaproxy": true,
    },
    "url": "https://www.free.fr",
  },
]
`;
